# OpenglLearn

./: .gitignore  20240723.cpp  20240904.cpp  20240910.cpp  20240911.cpp  20240917.cpp  AfterRender.cpp  BPR.cpp  BaseLayout.cpp  CMakeLists copy.txt  CMakeLists.txt  CSMbutRenderPipe.cpp  HigherLight.cpp  ModelAndMaterial.cpp  ModelPrint.cpp  MoreData.cpp  SSAO.cpp  SceneRender.cpp  animation.cpp  apprun.cpp  build.bat  clang-msvc.cmake  depthtest.cpp  goujian.bat  hh.cpp  imageCheck.cpp  ir.py  log.txt  main.cpp  makefile  qianwan.cpp  quaternion.cpp  resourcetest.cpp  script_program.cpp  shadertoy.cpp  test.cpp  tex.cpp  tool.py  transparent.cpp  开发宏说明.txt  (+3 more)
Application/: CMakeLists.txt  application.cpp
Engine/src/engine/: CMakeLists.txt
Engine/src/engine/Application/: application copy.cpp  application copy.h  application.cpp
Engine/src/engine/Camera/: camera.cpp
Engine/src/engine/CodeMomeryInsert/: memory_insert.cpp  memory_insert.h
Engine/src/engine/Collision/: collision_event.h
Engine/src/engine/DebugTool/DynamicVarChange/: dynamic_change_vars.cpp
Engine/src/engine/DebugTool/RunTimeInspector/: fatal_error_assert_log.h
Engine/src/engine/Device/: device.cpp
Engine/src/engine/ECS/: data_type.h  log.txt
Engine/src/engine/ECS/Component/: component.h  component_init.h  component_loader_registry.h  component_register.h  component_shortage.h
Engine/src/engine/ECS/DataType/: script_collision_event.h
Engine/src/engine/ECS/Entity/: .json  entity.h  entity_manager.h
Engine/src/engine/ECS/Mesh/: mesh.h
Engine/src/engine/ECS/System/: system.h
Engine/src/engine/Environment/: environment.h
Engine/src/engine/Graphic/Opengl/: ubo_binding_config.h
Engine/src/engine/Material/: example.json  material.cpp
Engine/src/engine/Model/: animation.cpp  animator.cpp  bone.cpp  bone.h  configExample.json  mesh.cpp  mesh_a.h  model_animation.cpp
Engine/src/engine/ModuleManager/: module_manager.h
Engine/src/engine/Render/RenderItems/: static_vertex_array.h
Engine/src/engine/Render/RenderPipe/: renderpipe.h  simple_render_pipe.cpp  simple_render_pipe.h
Engine/src/engine/RenderPipe/: RenderPipe.cpp  UniformBindings.h  simpleRenderPipe.cpp  simpleRenderPipe.h
Engine/src/engine/RenderPipe/Pass/: CSMpass.cpp  CSMpass.h  CameraPass.cpp  CameraPass.h  ImageToBuffer.cpp  ImageToBuffer.h  ScenePass.cpp  ScenePass.h  UBOManager.cpp  pass.cpp
Engine/src/engine/RenderPipe/RenderContext/: RenderPipeConfig.h  renderItem.h
Engine/src/engine/Resource/Material/: .json  material.cpp  material.h  material_init.h  material_interface.h  material_interface_factory.cpp  material_interface_factory.h  material_interface_loader_registry.h  草稿.txt
Engine/src/engine/Resource/Model/: mesh.cpp  mesh.h  model.cpp  (+1 more)
Engine/src/engine/Scene/: prefab.json  scene.cpp  scene.h  scene.json
Engine/src/engine/Script/: script_interface.h  script_manager.h
Engine/src/engine/StdImage/: stb_image.cpp
Engine/src/engine/Texture/: texture.cpp  texture.h
Engine/src/engine/ToolAndAlgorithm/: container_algorithm.h  transformation.h
Engine/src/engine/VisualTool/: visual.cpp  visual.h
Engine/src/engine/programs/: 20240723.cpp  20240904.cpp  20240910.cpp  20240911.cpp  20240917.cpp  AfterRender.cpp  BPR.cpp  BaseLayout.cpp  CSMbutRenderPipe.cpp  HigherLight.cpp  ModelAndMaterial.cpp  MoreData.cpp  SSAO.cpp  SceneRender.cpp  animation.cpp  depthtest.cpp  hh.cpp  imageCheck.cpp  main.cpp  qianwan.cpp  quaternion.cpp  resourcetest.cpp  script.lib  shadertoy.cpp  test.cpp  transparent.cpp
Engine/src/plugin/: CMakeLists.txt  script_program.cpp
Engine/tests/: CMakeLists.txt  archtype_description.cpp  archtype_instance.cpp  archtype_manager.cpp  archtype_preload_instance.cpp  chunk_schedule.cpp  context.cpp  job_system.cpp  job_system_bad_test.cpp  job_system_common_test.cpp  job_system_schedule.cpp  query_test.cpp  scene.cpp  test.cpp  test1.cpp  test2.cpp
Engine/tests/TestSystem/: transform_system.h  transform_system.hpp
Module/: CMakeLists.txt  module.h  module_context.cpp  module_context.h  module_context_gen.h  module_include_gen.h  module_manager.cpp  module_manager.h  quest.txt
Module/Application/: CMakeLists.txt
Module/Application/docs/: application_module_usage.html
Module/Application/private/: application_module.cpp
Module/Application/public/: application_module.h
Module/Render/: CMakeLists.txt  resource_manager_refactor_plan.md  rhi_stage1_command_proxy_plan.md
Module/Render/Private/: render_module.cpp
Module/Render/Private/RHI/: RHI_texture.cpp  rhi_backend_executor.h  rhi_backend_resource_table.cpp  rhi_backend_resource_table.h  rhi_command_queue.cpp  rhi_command_queue.h  rhi_dual_command_queue.cpp  rhi_dual_command_queue.h  rhi_texture_validator.cpp
Module/Render/Private/Runtime/: render_thread.cpp  render_thread.h
Module/Render/Public/: render_module.h
Module/Render/Public/RHI/: RHI_buffer.h  RHI_device.h  RHI_input_layout.h  RHI_resource.h  RHI_texture.h  rhi_command.h  rhi_common.h  rhi_frontend.cpp  rhi_frontend.h  rhi_handle_allocator.h  rhi_handles.h  rhi_texture_validator.h
Module/Render/Test/: rhi_buffer_test.cpp  rhi_command_proxy_test.cpp  rhi_empty_texture_test.cpp  rhi_texture_validator_test.cpp
Module/Render/docs/: render_architecture.html  render_module_usage.html  render_module_usage.md  rhi_buffer_usage.html  rhi_texture_usage.html  rhi_texture_validator_usage.html
Module/Render2D/Public/Component/: sprite.h
Module/Render2D/Public/System/: paper_2d_render_system.hpp
Module/ResourceManager/: CMakeLists.txt  quest.md
Module/ResourceManager/Private/: resource_manager_module.cpp
Module/ResourceManager/Public/: resource_control_block.h  resource_control_block.inl  resource_handle.h  resource_handle.inl  resource_load_options.h  resource_load_options.inl  resource_loadable.h  resource_manager_module.h  resource_manager_module.inl
Module/ResourceManager/docs/: resource_manager_improved.html  resource_manager_usage.html
Module/Test/: module_context_test.cpp  resource_manager_test.cpp  test.cpp
Module/docs/: module_context_usage.html
(+527 files in other folders)
